[gd_scene load_steps=3 format=2]

[ext_resource path="res://weapons/Bullet.gd" type="Script" id=1]
[ext_resource path="res://weapons/BulletExplosion.tscn" type="PackedScene" id=2]

[node name="Bullet" type="Area2D" groups=[
"bullets",
]]
collision_layer = 16
collision_mask = 9
script = ExtResource( 1 )
speed = 400

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="BulletExplosion" parent="." instance=ExtResource( 2 )]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="BulletExplosion/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="BulletExplosion"]
